@@ -6,8 +6,13 @@
 ==========更新日志==========
 
 
+==========5.37==========
+2025-
+1. labelframe在无标题时仅绘制边框
+2. 修复button2在无图标字符时删除空文本的错误
+
 ==========5.36==========
-2025-7
+2025-7-14
 1. 针对持续维护的tinuilight, tinuidark，使用参数覆盖而非直接指定颜色，即可额外自定义各控件颜色
 2. menubutton, picker添加点击时按钮颜色参数
 3. 弹出窗口在最后一轮动画才会尝试获取焦点
